--- a/src/styles/addContact.css
+++ b/src/styles/addContact.css
@@ -1,10 +1,8 @@
 .formulario{
-    margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .form-label{
+    justify-content: start;
     text-align: left;
 }
